manifests/policies/base/templates/k8s-block-cross-namespace-service.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblockcrossnamespaceservice
spec:
  crd:
    spec:
      names:
        kind: K8sBlockCrossNamespaceService
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockcrossnamespaceservice

        violation[{"msg": msg}] {
          input.review.kind.kind == "Service"
          input.review.object.spec.type == "ExternalName"
          contains(input.review.object.spec.externalName, ".svc.cluster.local")
          msg := sprintf("Service '%v' of type ExternalName cannot reference cross-namespace internal services.", [input.review.object.metadata.name])
        }
